Revert "fix(config): Clear HTTP basic auth cache to prevent credential conflicts"
This is no longer required with ORT version 71.5.0 [1] which configures
the Apache client as `HttpTransport` implementation [2].

This reverts commit 1009010e338a64ed093f33e888e67e99e34be977.

[1]: https://github.com/oss-review-toolkit/ort/releases/tag/71.5.0
[2]: https://github.com/oss-review-toolkit/ort/pull/11099

Signed-off-by: Marcel Bochtler <marcel.bochtler@bosch.com>